@@ -1,3 +1,7 @@
+2013-05-29  Sancho Lerena <slerena@artica.es> 
+
+	*  operation/search.php: Added lead search feature.
+
 2013-05-29  Dario Rodriguez <dario@artica.es>
 
 	* operation/contacts/contact_detail.php: Fixed a bug related to
